fix(products): fixed bugs and changes

--- a/src/data/app.json
+++ b/src/data/app.json
@@ -47,7 +47,7 @@
             },
             {
                 "label": "Products",
-                "link": "/projects",
+                "link": "/products",
                 "children": 0
             },
             {
