--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@formspree/react": "^2.5.1",
     "date-fns": "^2.30.0",
     "formik": "^2.4.2",
     "gray-matter": "^4.0.3",
